[gd_scene format=3 uid="uid://o7ljiritpgap"]

[ext_resource type="Script" uid="uid://bcu347pvraog6" path="res://addons/dialogic/Editor/Settings/CoreSettingsPages/settings_modules.gd" id="1_l2hk0"]

[sub_resource type="Image" id="Image_bclq7"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 93, 93, 55, 255, 97, 97, 58, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 98, 98, 47, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 94, 94, 46, 255, 93, 93, 236, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_137g7"]
image = SubResource("Image_bclq7")

[sub_resource type="Image" id="Image_1yyxk"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_lce2m"]
image = SubResource("Image_1yyxk")

[node name="ModuleManagement" type="HSplitContainer" unique_id=538174781]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -157.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
script = ExtResource("1_l2hk0")
short_info = "Here you can manage modules:
- change event defaults
- hide events from the event list"

[node name="Overview" type="VBoxContainer" parent="." unique_id=584770025]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Overview" unique_id=2065308431]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="HBox" type="HFlowContainer" parent="Overview/ScrollContainer" unique_id=641853081]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 2

[node name="Filters" type="HBoxContainer" parent="Overview/ScrollContainer/HBox" unique_id=812935428]
unique_name_in_owner = true
layout_mode = 2

[node name="Filter_Events" type="Button" parent="Overview/ScrollContainer/HBox/Filters" unique_id=1770970323]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Include Events"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_pressed = true
text = "27"
icon_alignment = 2
metadata/counter = 27

[node name="Filter_Subsystems" type="Button" parent="Overview/ScrollContainer/HBox/Filters" unique_id=899699063]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Include Subsystems"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_pressed = true
text = "19"
icon_alignment = 2
metadata/counter = 19

[node name="Filter_EffectsAndModifiers" type="Button" parent="Overview/ScrollContainer/HBox/Filters" unique_id=1831330531]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Include Text Effects and Modifiers"
theme_type_variation = &"FlatButton"
toggle_mode = true
text = "15"
icon_alignment = 2
metadata/counter = 15

[node name="Filter_Styles" type="Button" parent="Overview/ScrollContainer/HBox/Filters" unique_id=442872763]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Include Preset Style Scenes"
theme_type_variation = &"FlatButton"
toggle_mode = true
text = "15"
icon_alignment = 2
metadata/counter = 15

[node name="Filter_Settings" type="Button" parent="Overview/ScrollContainer/HBox/Filters" unique_id=788315383]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Include Settings Pages"
theme_type_variation = &"FlatButton"
toggle_mode = true
text = "6"
icon_alignment = 2
metadata/counter = 6

[node name="Filter_Editors" type="Button" parent="Overview/ScrollContainer/HBox/Filters" unique_id=2115117454]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Include Editors"
theme_type_variation = &"FlatButton"
toggle_mode = true
text = "3"
icon_alignment = 2
metadata/counter = 3

[node name="Search" type="LineEdit" parent="Overview/ScrollContainer/HBox" unique_id=1749645592]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"
clear_button_enabled = true

[node name="Refresh" type="Button" parent="Overview/ScrollContainer/HBox" unique_id=1919233634]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Refresh"

[node name="Collapse" type="Button" parent="Overview/ScrollContainer/HBox" unique_id=1713654816]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Collapse All"
toggle_mode = true
button_pressed = true

[node name="Tree" type="Tree" parent="Overview" unique_id=2002333500]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"TreeSecondary"
allow_reselect = true
hide_root = true

[node name="Scroll" type="ScrollContainer" parent="." unique_id=280174295]
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.75
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="Settings" type="VBoxContainer" parent="Scroll" unique_id=770304559]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="Scroll/Settings" unique_id=1522881579]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Scroll/Settings/HBox" unique_id=26017225]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 3

[node name="Title" type="Label" parent="Scroll/Settings/HBox" unique_id=1323694018]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"DialogicSubTitle"
text = "Audio"

[node name="VisibilityToggle" type="Button" parent="Scroll/Settings/HBox" unique_id=1399656633]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Toggle Event Button Visibility"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_pressed = true
icon = SubResource("ImageTexture_137g7")

[node name="ExternalLink" type="Button" parent="Scroll/Settings/HBox" unique_id=488553913]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"FlatButton"
icon = SubResource("ImageTexture_lce2m")

[node name="Documentation" type="Button" parent="Scroll/Settings/HBox" unique_id=2144591126]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Show in FileSystem"
theme_type_variation = &"FlatButton"

[node name="ShowInFileSystem" type="Button" parent="Scroll/Settings/HBox" unique_id=327123463]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Show in FileSystem"
theme_type_variation = &"FlatButton"

[node name="Open" type="Button" parent="Scroll/Settings/HBox" unique_id=153524768]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Open"
theme_type_variation = &"FlatButton"

[node name="EventDefaultsPanel" type="PanelContainer" parent="Scroll/Settings" unique_id=1538662659]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Scroll/Settings/EventDefaultsPanel" unique_id=909920434]
layout_mode = 2

[node name="Title" type="Label" parent="Scroll/Settings/EventDefaultsPanel/VBox" unique_id=404311626]
layout_mode = 2
text = "Event Defaults:"

[node name="EventDefaults" type="GridContainer" parent="Scroll/Settings/EventDefaultsPanel/VBox" unique_id=1002365879]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="HSeparator" type="HSeparator" parent="Scroll/Settings/EventDefaultsPanel/VBox" unique_id=2034226101]
clip_contents = true
layout_mode = 2

[node name="GeneralInfo" type="Label" parent="Scroll/Settings" unique_id=15394927]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"DialogicHintText2"
autowrap_mode = 3

[connection signal="toggled" from="Overview/ScrollContainer/HBox/Filters/Filter_Events" to="." method="_on_filter_toggled" flags=18]
[connection signal="toggled" from="Overview/ScrollContainer/HBox/Filters/Filter_Subsystems" to="." method="_on_filter_toggled" flags=18]
[connection signal="toggled" from="Overview/ScrollContainer/HBox/Filters/Filter_EffectsAndModifiers" to="." method="_on_filter_toggled" flags=18]
[connection signal="toggled" from="Overview/ScrollContainer/HBox/Filters/Filter_Styles" to="." method="_on_filter_toggled" flags=18]
[connection signal="toggled" from="Overview/ScrollContainer/HBox/Filters/Filter_Settings" to="." method="_on_filter_toggled" flags=18]
[connection signal="toggled" from="Overview/ScrollContainer/HBox/Filters/Filter_Editors" to="." method="_on_filter_toggled" flags=18]
[connection signal="text_changed" from="Overview/ScrollContainer/HBox/Search" to="." method="_on_search_text_changed"]
[connection signal="pressed" from="Overview/ScrollContainer/HBox/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="toggled" from="Overview/ScrollContainer/HBox/Collapse" to="." method="_on_collapse_toggled"]
[connection signal="button_clicked" from="Overview/Tree" to="." method="_on_tree_button_clicked"]
[connection signal="item_selected" from="Overview/Tree" to="." method="_on_tree_item_selected"]
[connection signal="toggled" from="Scroll/Settings/HBox/VisibilityToggle" to="." method="_on_visibility_toggle_toggled"]
[connection signal="pressed" from="Scroll/Settings/HBox/ExternalLink" to="." method="_on_external_link_pressed"]
[connection signal="pressed" from="Scroll/Settings/HBox/Documentation" to="." method="_on_documentation_pressed"]
[connection signal="pressed" from="Scroll/Settings/HBox/ShowInFileSystem" to="." method="_on_show_in_file_system_pressed"]
[connection signal="pressed" from="Scroll/Settings/HBox/Open" to="." method="_on_open_pressed"]
